# Bitswap-demo

./: .env  .env.sample  .gitignore  APACHE-LICENSE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DCO  Dockerfile  LICENSE  LICENSE-BUSINESS.md  LICENSE.md  MAINTAINERS.md  MANIFEST.yml  MIT-LICENSE.md  README.md  SECURITY.md  cargo.toml  demo.sh  pacake.json  package-lock.json  pairs.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflow/: rust.yml
.github/workflows/: codacy.yml  dependabot.yml  devskim.yml  docs.yml  lint.yml  publish.yml  rust-clippy.yml  rust.yml  rust_publish.yml
doc/: architecture.md  development.md  run.md
public/: index.html
rgb/: node.rs
server/amm/: Cargo.toml
server/amm/src/: api.rs  config.rs  lib.rs  main.rs
server/rgb/: api.rs
src/: Cargo.toml  aluvm.rs  amm.rs  bifrost.rs  bitcoin.rs  cli.rs  constants.rs  dlc.rs  error.rs  lib.rs  lightning.rs  main.rs  oracle.rs  proxy.rs  regtest.rs  rgb.rs  signet.rs  testnet.rs  util.rs  validators.rs
src/aluvm/: Cargo.toml  baid.rs  strict.rs
src/bifrost/: Cargo.toml  channel.rs  lightning_bifrost.rs  peer.rs  swap.rs
src/bitcoin/: bitcoin.rs  miniscript.rs  musig2.rs  network.rs  rbf.rs  tapree.rs
src/bp-core/: consensus.rs
src/cli/: Cargo.toml  cli.rs  command.rs  command.sh  core.rs  main.rs  mod.rs
src/contract/: asset.rs  dlc.rs  node.rs  rgb20.rs
src/dex/: Cargo.toml  algorithm.rs  amm_function.rs  api.rs  esplora.rs  lp.rs  p2tr.rs  pair.rs  pool.rs  swap.rs
src/dex/assets/: lp.rs  pair.rs  pool.rs  swap.rs
src/dex/functions/main/: amm_function.rs  amm_manager.rs  lib.rs  utils.rs
src/gui/: main.rs
src/lightning/: Cargo.toml  ldk.rs  lnp.rs  lsp.rs  node.rs  node_initial.rs  swap.rs
src/op/: lib.rs  op.rs  script.rs
src/oracle/: dlc.rs  mod.rs  peer.rs  server.rs
src/rgb20/example/: rgb20-example.rgb  rgb20.rs
src/script/: script.rs
src/storage/: carbonado.rs
src/vm/: Cargo.toml  main_function.rs
src/wallet/: Mycitadel  Mycitadel.rs  RGB_wallet.rs  bitcoin.rs  bitguard  bitmask  iriswallet  mod.rs  payjoin.rs  rgb_std.rs  rgb_wallet.rs
src/wallet/payjoin/: receiver.rs  sender.rs
src/web/: Cargo.toml  command.sh  rocket.rs
stl/: bitswap0.1.sty
