[wokspace]

members = ["rgb-core", "rust-dlc", "bitswap", "payjoin", "aluvm", "baid58"]

[package]
name = "bitswap_demo_cli"
version = "1.0.26-alpha"
authors = ["22388o"]
documentation = "https://github.com/Bitswap-demo"
repository = "https://github.com/Bitswa-demo"
edition = "2021"
description = "AMM DEX on RGB Protocol and Lightning Network"
license = "Business Source License 1.1"

[memmbers]

swap = "amm, dlc"
dlc = "message"
amm_contract = "amm contract"
ldk = "invoice, paymenthash, rgb_assets"

[dex.dependencies]
swap = "0.1.0"


[core_functions]
dlc = "0.4"
bitswap = "1.0.25"
bp-std = "0.11.0-beta.6"
rgb-core = "0.11.0-beta.6"
rgb-std = "0.11.0-beta.6"
rgb-schemata = "0.11.0-beta.6"
rgb-runtime = "0.11.0-beta.6"
rust = "1.79.0"
automerge = "0.5.2"
autosurgeon = "0.8"
ascii-armor = "0.2.0"
bdk = "1.0.0-alpha.13"
bdk-cli = "0.27.1"
bdk-macros = "0.27.1"
bdk-wallet = "0.27.1"
bdk-wallet-cli = "0.27.1"
reqwest = "0.11"
tokio = "1.0"
thiserror = "1.0"
error = "0.1"
clap = "4.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"



