[wokspace]

members = ["rgb-core", "rust-dlc", "bitswap", "payjoin", "aluvm", "baid58"]

[package]
name = "bitswap_demo_cli"
version = "1.0.27-alpha"
authors = ["22388o", "Rsync25"]
documentation = "https://github.com/Bitswap-demo"
repository = "https://github.com/Bitswa-demo"
edition = "2021"
description = "AMM DEX on RGB Protocol and Lightning Network"
license = "Business Source License 1.1"

[memmbers]

swap = "amm, dlc"
dlc = "message"
amm_contract = "amm contract"
ldk = "invoice, paymenthash, rgb_assets"

[dex.dependencies]
swap = "0.1.0"


[core_functions]
dlc = "0.4"
bitswap = "1.0.25"
rgb-core = "0.11.0-beta.6"
rgb-std = "0.11.0-beta.6"
rgb-schemata = "0.11.0-beta.6"
rgb-runtime = "0.11.0-beta.6"
bp-std = "0.11.0-beta.6"
rust = "1.79.0"
automerge = "0.5.2"
autosurgeon = "0.8"
ascii-armor = "0.2.0"
bdk = "1.0.0-beta.1"
bdk-cli = "0.27.1"
bdk-macros = "0.27.1"
bdk-wallet = "1.0.0-beta.1"
bdk-wallet-cli = "0.27.1"
reqwest = "0.11"
tokio = "1.0"
thiserror = "1.0"
error = "0.1"
gtk = "0.10.1" # Check for the latest version
glib = "0.10.2"
gio = "0.10.2"


[rust_bitcoin]
[patch.crates-io.bitcoin]
path = "bitcoin"

[patch.crates-io.bitcoin_hashes]
path = "hashes"

[patch.crates-io.bitcoin-internals]
path = "internals"


default = ["bolt", "strict_encoding"]
all = ['bifrost', "serde"]
bolt = ["lightning_encoding", "strict_encoding"] # Remove strict encoding requirement
bifrost = ["strict_encoding", "bolt"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/serde"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


