[package]

name = "Src_core"
version = "1.0.22-alpha"

[dependencies]
strict_encoding = "~2.7.0-beta.1"
strict_types = "2.7.0-beta.2"
rust-aluvm = "0.11.0-beta.5"
rust-lightning = "0.0.120"
commit_verify = { version = "0.10.5", features = ["stl"] }
bp-core = { version = "0.11.0-beta.4", features = ["stl" ,"seals","dbc"] }
rgb-core = { version = "0.11.0-beta.4", features = ["stl", "contract", "vm" , "schema" , "validation"] }
bp-std = { version = "0.11.0-beta.4", features = ["stl", "psbt" , "invoice"] }
rgb-std = { version = "0.11.0-beta.4", features = ["stl" , "scripts" , "invoice" , "interface"] }
rgb-schemata = { version = "0.11.0-beta.4", features = ["stl", "nia", "interfaces", "rgb20" ] }
rgb-runtime = { version = "0.11.0-beta.3", features = ["cli", "psbt"] }
rust-dlc = { version = "0.4.0", features = ["dlc-message" , "dlc-manager", "p2pd-oracle-client", "bitcoin-rpc-provider"]}
bp-esplora = { version = "0.11.0-beta.4", features = ["api"] }
automerge = "0.5.2"
autosurgeon = "0.8"
baid58 = "0.4.4"
ascii-armor = "0.2.0"
