[package]
name = "amm_server"
version = "0.1.2"
edition = "2021"

[dependencies]

config = { version = "0.14.0", features = ["full"] }
lib  = { version = "0.14.0", features = ["full"] }
api = { version ="0.2.0", features = ["full"] }

[[bin]]
name = "config" 
path = { version = "1" , features = ["src/config.rs"] }

[[bin]]
name =  "api" 
path = { version = "1" , features = ["src/api.rs"] }

[[bin]]
name = "main" 
path = { version = "1" , features = ["src/main.s"] }

