[package]
name = "bifrost"
version = "0.9.2"




[dependencies]
amplify = { version = "3.13.0", features = ["hex", "rand"] }
lnpbp = "0.9.0"
bp-core = "0.9.0"
strict_encoding = { version = "0.9.0", optional = true, features = ["chrono", "miniscript"] }
lightning_encoding = { version = "0.9.0", optional = true }
bitcoin_scripts = "0.9.0"
psbt = "0.9.0"
miniscript = "9.0.0"
bitcoin = "0.29.2"
secp256k1 = { version = "0.24.2", features = ["global-context"] }
internet2 = { version = "0.9.0-rc.1", default-features = false, features = ["derive"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }
once_cell = "1.12.0"
chrono = "0.4"

[features]
default = ["bolt", "strict_encoding"]
all = ['bifrost', "serde"]
bolt = ["lightning_encoding", "strict_encoding"] # Remove strict encoding requirement
bifrost = ["strict_encoding", "bolt"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/serde"]
